force-app/main/default/objects/Demo_Build__c/Demo_Build__c.object-meta.xml
<CustomObject>
    <label>Demo Build</label>
    <nameField>
        <label>Demo Build Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demo Builds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>