force-app/main/default/objects/Demo_Build__c/fields/Compelling_Reason__c.field-meta.xml
<CustomField>
    <fullName>Compelling_Reason__c</fullName>
    <label>Compelling Reason</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>