force-app/main/default/objects/Demo_Build__c/listViews/My_Demo_Builds.listView-meta.xml
<ListView>
    <fullName>My_Demo_Builds</fullName>
    <columns>NAME</columns>
    <columns>Industry__c</columns>
    <columns>Type__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Demo Builds</label>
</ListView>