force-app/main/default/objects/Demo_Build__c/listViews/My_Open_Demo_Builds.listView-meta.xml
<ListView>
    <fullName>My_Open_Demo_Builds</fullName>
    <columns>NAME</columns>
    <columns>Industry__c</columns>
    <columns>Type__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,Working</value>
    </filters>
    <label>My Open Demo Builds</label>
</ListView>