force-app/main/default/objects/Demo_Build__c/listViews/Open_Demo_Build_Requests.listView-meta.xml
<ListView>
    <fullName>Open_Demo_Build_Requests</fullName>
    <columns>NAME</columns>
    <columns>Industry__c</columns>
    <columns>Type__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>Open Demo Build Requests</label>
</ListView>